finish RNG and catgeories

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <section class="left">
 
             <div class="certificate " id="certificate">
-                <span id="nameOutput" class="visible">Test Name</span>
-                <span id="info">Test Info</span>
+                <span id="nameOutput" class="visible"></span>
+                <span id="info"></span>
             </div>
 
         </section>
@@ -26,10 +26,10 @@
                 <input type="text" name="name" id="name" placeholder="Name">
         
                 <select name="type" id="type">
-                    <option value="A">A</option>
-                    <option value="B">B</option>
-                    <option value="C">C</option>
-                    <option value="D">D</option>
+                    <option value="A">Programming</option>
+                    <option value="B">Life</option>
+                    <option value="C">Making Decisions 	&#40;Good or Bad I Don't Care&#41;</option>
+                    <option value="D">Following Instructions</option>
                 </select>
                 <input type="submit" value="Eh, It's good enough">
         
