eh, its good enough

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <div class="pagewrapper">
 
         <section class="left">
-
-            <div class="certificate " id="certificate">
-                <span id="nameOutput" class="visible"></span>
+            <section class="theTextThatDoesNotChange">
+                <h1>coongraptulashions ! !!! !</h1>
+                <h2> <span id="nameOutput" class="visible"></span> Is Mediocre In:</h2>
+            </section>
+            <div class="certificate " id="certificate" class="funniFont">
+                
                 <span id="info"></span>
             </div>
 
@@ -31,7 +34,7 @@
                     <option value="C">Making Decisions 	&#40;Good or Bad I Don't Care&#41;</option>
                     <option value="D">Following Instructions</option>
                 </select>
-                <input type="submit" value="Eh, It's good enough">
+                <input type="submit" value="Eh, It's good enough" id="button">
         
             </form>
         </section>
